--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container">
           <span>Made with <span style="color: red;"> ♥ </span> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
         </a>
-      </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive"><span>GitHub</span> <i class="fab fa-github"></i>
+      </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive"><span>GitHub</span></a> <i class="fab fa-github"></i>
     </div>
   </footer>
 
