--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2 id="header-name"><a href="http://nandiya.tk" title="Neranjana Prasad (@NandiyaLive) | Future FullStack Developer">Neranjana</a></h2>
           </div>
           <div class="nav-links">
-            <a href="http://blog.nandiya.tk" target="_blank" title="Nandiya's Sinhala Blog">Blog</a>
+            <a href="http://blog.neranjana.tk" target="_blank" title="Nandiya's Sinhala Blog">Blog</a>
           </div>
         </nav>
       </div>
