--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="container text-white">
         <nav>
           <div class="site-name">
-            <h2 id="header-name"><a href="http://nandiya.tk" title="Neranjana Prasad (@NandiyaLive) | Future FullStack Developer">Neranjana</a></h2>
+            <h2 id="header-name"><a href="http://neranjana.tk" title="Neranjana Prasad (@NandiyaLive) | Future FullStack Developer">Neranjana</a></h2>
           </div>
           <div class="nav-links">
-            <a href="http://blog.neranjana.tk" target="_blank" title="Nandiya's Sinhala Blog">Blog</a>
+            <a href="http://blog.neranjana.tk" target="_blank" title="Guy Behind The Computer">Blog</a>
           </div>
         </nav>
       </div>
@@ -49,7 +49,7 @@
           <div class="col-md-7 order-md-2">
             <h2>Hello 👋</h2>
             <p>I'm Neranjana Prasad Ponnamperuma, a 20 year old Tech Geek currently living in Sri Lanka. I have a burning passion to code and starving to become a FullStack Developer. Outside of coding, you can find me watching Movies! Also I occasionally update my <a href="http://blog.nandiya.tk" target="_blank" class="linked">Blog</a>.
-              <br>Did I mention about <span style="color:#dc143c" class="rash"><a href ="https://en.wikipedia.org/wiki/Rashmika_Mandanna" target="_blank" title="Rashmika Mandanna (born 5 April 1996) is an Indian film actress and model who works predominantly in Telugu and Kannada films.She is popularly dubbed by the media and Kannada film industry as the 'Karnataka Crush'.">Rashmika Mandanna</a></span> ? Gaah! She is the cutest girl on the Earth. <span class="love">♥</span></p>
+              <br>Did I mention about <span style="color:#dc143c" class="rash"><a href ="https://en.wikipedia.org/wiki/Rashmika_Mandanna" target="_blank" title="Rashmika Mandanna (born 5 April 1996) is an Indian film actress and model who works predominantly in Telugu and Kannada films.She is popularly dubbed by the media and Kannada film industry as the 'Karnataka Crush'.">Rashmika Mandanna</a></span> ? Gaah! She is the cutest girl on the Earth. <i class="fa fa-heart love" style="color: red;"></i></p>
               <!-- <p><strong>Sorry! I still don't have any professional experience into freelancing projects.</strong></p> -->
             </div>
             <div class="col-md-5 order-md-1" align="center">
@@ -90,31 +90,29 @@
         <hr class="divider">
 
         <div class="text-center text-white">
-          <p>Wanna contact me? Simply click on any link below.</p>
+          <h4>Let's be friends.</h4>
           <ul class="social-icons icon-circle list-unstyled list-inline">
-            <li> <a href="https://twitter.com/NandiyaLive"><i class="fab fa-twitter"></i></a></li>
-            <li> <a href="https://instagram.com/NandiyaLive"><i class="fab fa-instagram"></i></a></li>
-            <li> <a href="https://linkedin.com/neranjanaprasad"><i class="fab fa-linkedin-in"></i></a></li>
-            <li> <a href="https://facebook.com/NandiyaLive"><i class="fab fa-facebook-f"></i></a></li>
-            <li> <a href="https://github.com/NandiyaLive"><i class="fab fa-github"></i></a></li>
-            <li> <a href="https://stackoverflow.com/NandiyaLive"><i class="fab fa-stack-overflow"></i></a></li>
-            <li> <a href="https://reddit.com/u/NandiyaLive"><i class="fab fa-reddit"></i></a></li>
-            <li> <a href="https://t.me/NandiyaLive"><i class="fab fa-telegram-plane"></i></a></li>
+            <li> <a href="https://twitter.com/NandiyaLive" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+            <li> <a href="https://instagram.com/NandiyaLive" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+            <li> <a href="https://linkedin.com/neranjanaprasad" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+            <li> <a href="https://facebook.com/NandiyaLive" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li> <a href="https://github.com/NandiyaLive" title="GitHub"><i class="fab fa-github"></i></a></li>
+            <li> <a href="https://stackoverflow.com/NandiyaLive" title="Stack Overflow"><i class="fab fa-stack-overflow"></i></a></li>
+            <li> <a href="https://reddit.com/u/NandiyaLive" title="Reddit"><i class="fab fa-reddit-alien"></i></a></li>
+            <li> <a href="https://t.me/NandiyaLive" title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
           </ul>
         </div>
       </div>
-
+    </main>
 
       <!-- FOOTER -->
       <footer class="footer mt-auto py-3 text-white text-center">
         <div class="container">
-          <span>Made with <span style="color: red;"> ♥ </span> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
+          <span>Made with <i class="fa fa-heart" style="color: red;"></i> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
         </a>
-      </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive"><span>GitHub</span></a> <i class="fab fa-github"></i>
+      </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive/nandiyalive.github.io"><span>GitHub</span></a> <i class="fab fa-github"></i>
     </div>
   </footer>
-
-</main>
 
 
 <!--/ TypeWriter /-->
