--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+/* ************************************************************ */
+/* *   Coded and Designed By Neranjana Prasad (@NandiyaLive)  * */
+/* ************************************************************ */ 
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400;1,500&display=swap" rel="stylesheet"> 
   <script async="" src="assets/js.js"></script>
   <script src="https://kit.fontawesome.com/1dc379e3e7.js" crossorigin="anonymous"></script>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap.css" rel="stylesheet">
@@ -25,12 +32,16 @@
 <body>
   <header>
     <div class="hero-image">
+      <!-- <div class="top-banner text-center top-text">
+        <span>#</span>
+      </div> -->
       <div class="container text-white">
         <nav>
           <div class="site-name">
             <h2 id="header-name"><a href="http://neranjana.tk" title="Neranjana Prasad (@NandiyaLive) | Future FullStack Developer">Neranjana</a></h2>
           </div>
           <div class="nav-links">
+            <a href="more.html" title="More On Neranjana">More</a>
             <a href="http://blog.neranjana.tk" target="_blank" title="Guy Behind The Computer">Blog</a>
           </div>
         </nav>
@@ -48,9 +59,9 @@
         <div class="row">
           <div class="col-md-7 order-md-2">
             <h2>Hello 👋</h2>
-            <p>I'm Neranjana Prasad Ponnamperuma, a 20 year old Tech Geek currently living in Sri Lanka. I have a burning passion to code and starving to become a FullStack Developer. Outside of coding, you can find me watching Movies! Also I occasionally update my <a href="http://blog.nandiya.tk" target="_blank" class="linked">Blog</a>.
-              <br>Did I mention about <span style="color:#dc143c" class="rash"><a href ="https://en.wikipedia.org/wiki/Rashmika_Mandanna" target="_blank" title="Rashmika Mandanna (born 5 April 1996) is an Indian film actress and model who works predominantly in Telugu and Kannada films.She is popularly dubbed by the media and Kannada film industry as the 'Karnataka Crush'.">Rashmika Mandanna</a></span> ? Gaah! She is the cutest girl on the Earth. <i class="fa fa-heart love" style="color: red;"></i></p>
-              <!-- <p><strong>Sorry! I still don't have any professional experience into freelancing projects.</strong></p> -->
+            <p>I'm Neranjana Prasad Ponnamperuma, a 20 year old Tech Geek currently living in Sri Lanka. I have a burning passion to code and starving to become a FullStack Developer. Outside of coding, you can find me watching Movies! Also I occasionally update my Blog.
+              <br>Did I mention about <span style="color:#dc143c" class="rash"><a href ="https://en.wikipedia.org/wiki/Rashmika_Mandanna" target="_blank" title="♥ Rashmika Mandanna (born 5 April 1996) is an Indian film actress and model who works predominantly in Telugu and Kannada films.She is popularly dubbed by the media and Kannada film industry as the 'Karnataka Crush'.">Rashmika Mandanna</a></span> ? Gaah! She is the cutest girl on Earth &nbsp<i class="fa fa-heart love" style="color: red;" title="Love 👋"></i></p>
+              <!-- <a href="assets/neranjana.pdf" style="color: inherit;"><div class="cv-btn">Download CV</div></a> -->
             </div>
             <div class="col-md-5 order-md-1" align="center">
               <img src="./assets/img/avatar.png" width="300px" height="300px">
@@ -75,59 +86,104 @@
             <div class="col-md-6" align="center">
               <p><strong>I WORK WITH</strong></p>
               <ul class="work-with">
-                <li><img src="./assets/img/html5.svg" title="HTML5" height="50px"></li>
-                <li><img src="./assets/img/css3.svg" title="CSS3" height="50px"></li>
-                <li><img src="./assets/img/bs.svg" title="Bootstrap" height="50px"></li>
-                <li><img src="./assets/img/js.svg" title="JavaScript" height="50px"></li>
+                <li><img src="./assets/img/html5.svg" title="HTML5""></li>
+                <li><img src="./assets/img/css3.svg" title="CSS3""></li>
+                <li><img src="./assets/img/bs.svg" title="Bootstrap""></li>
+                <li><img src="./assets/img/js.svg" title="JavaScript""></li>
               </br>
-              <li><img src="./assets/img/ghost.png" title="Ghost" height="50px"></li>
-              <li><img src="./assets/img/wp.svg" title="WordPress" height="50px"></li>
-              <li><img src="./assets/img/python.svg" title="Python" height="50px"></li>
+              <li><img src="./assets/img/ghost.png" title="Ghost""></li>
+              <li><img src="./assets/img/wp.svg" title="WordPress""></li>
+              <li><img src="./assets/img/python.svg" title="Python""></li>
             </ul>
           </div>
         </div>
 
-        <hr class="divider">
+        <!-- <hr class="divider">
 
-        <div class="text-center text-white">
-          <h4>Let's be friends.</h4>
-          <ul class="social-icons icon-circle list-unstyled list-inline">
-            <li> <a href="https://twitter.com/NandiyaLive" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-            <li> <a href="https://instagram.com/NandiyaLive" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-            <li> <a href="https://linkedin.com/neranjanaprasad" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-            <li> <a href="https://facebook.com/NandiyaLive" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-            <li> <a href="https://github.com/NandiyaLive" title="GitHub"><i class="fab fa-github"></i></a></li>
-            <li> <a href="https://stackoverflow.com/NandiyaLive" title="Stack Overflow"><i class="fab fa-stack-overflow"></i></a></li>
-            <li> <a href="https://reddit.com/u/NandiyaLive" title="Reddit"><i class="fab fa-reddit-alien"></i></a></li>
-            <li> <a href="https://t.me/NandiyaLive" title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
-          </ul>
+        <h3 align="center">Projects</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img src="assets/img/post-bg.jpg" width="100%" height="180px">
+                <div class="card-body">
+                  <p class="card-text"><a href="Blog/post.html">Wireless Caharging</a></p>
+                  <div class="d-flex justify-content-between align-items-center" align="center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Github</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
+
+          <hr class="divider">
+
+          <div class="text-center text-white">
+            <h4>Let's be friends.</h4>
+            <ul class="social-icons icon-circle list-unstyled list-inline">
+              <li> <a href="https://twitter.com/NandiyaLive" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+              <li> <a href="https://instagram.com/NandiyaLive" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+              <li> <a href="https://linkedin.com/neranjanaprasad" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+              <li> <a href="https://facebook.com/NandiyaLive" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li> <a href="https://github.com/NandiyaLive" title="GitHub"><i class="fab fa-github"></i></a></li>
+              <li> <a href="https://stackoverflow.com/NandiyaLive" title="Stack Overflow"><i class="fab fa-stack-overflow"></i></a></li>
+              <li> <a href="https://reddit.com/u/NandiyaLive" title="Reddit"><i class="fab fa-reddit-alien"></i></a></li>
+              <li> <a href="https://t.me/NandiyaLive" title="Telegram"><i class="fab fa-telegram-plane"></i></a></li>
+            </ul>
+            
+          </div>
+
+          <hr class="divider">
+
+          <h4 align="center">Enough Scrolling. Let's Work!</h4>
+          <div class="row">
+            <div class="col-md-7">
+              <img src="assets/img/contact.svg" alt="" align="center">
+            </div>
+            <div class="col-md-5" id="contact">
+              <div class="contact container">
+                <div class="contact-form-area grid-2">
+                  <div class="contact-form">
+                   <form action="/#Message-Sent" name="contact" method="POST"><input type="hidden" name="form-name" value="contact">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name" required="">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required="">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="" rows="" placeholder="Leave Your Message" required=""></textarea>
+                    <button type="submit" class="hero-cta">Send Message</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
 
       <!-- FOOTER -->
       <footer class="footer mt-auto py-3 text-white text-center">
-        <div class="container">
-          <span>Made with <i class="fa fa-heart" style="color: red;"></i> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
-        </a>
-      </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive/nandiyalive.github.io"><span>GitHub</span></a> <i class="fab fa-github"></i>
-    </div>
-  </footer>
+          <span>Made with <i class="fa fa-heart" style="color: red;" title="Love"></i> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
+          </a>
+        </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive/nandiyalive.github.io"><span>GitHub</span></a> <i class="fab fa-github"></i>
+    </footer>
 
 
-<!--/ TypeWriter /-->
-<script type="text/javascript">
-  document.addEventListener('DOMContentLoaded', function (event) {
-    var dataText = ["Neranjana Prasad","Nandiya"];
-    function typeWriter(text, i, fnCallback) {
-      if (i < (text.length)) {
-        document.querySelector("#tagline").innerHTML = text.substring(0, i + 1) + '<span aria-hidden="true"></span>';
+    <!--/ TypeWriter /-->
+    <script type="text/javascript">
+      document.addEventListener('DOMContentLoaded', function (event) {
+        var dataText = ["Neranjana Prasad","Nandiya"];
+        function typeWriter(text, i, fnCallback) {
+          if (i < (text.length)) {
+            document.querySelector("#tagline").innerHTML = text.substring(0, i + 1) + '<span aria-hidden="true"></span>';
 
-        setTimeout(function () {
-          typeWriter(text, i + 1, fnCallback)
-        }, 150);
-      }
-      else if (typeof fnCallback == 'function') {
+            setTimeout(function () {
+              typeWriter(text, i + 1, fnCallback)
+            }, 150);
+          }
+          else if (typeof fnCallback == 'function') {
             // call callback after timeout
             setTimeout(fnCallback, 3000);
           }
