--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="contact container">
                 <div class="contact-form-area grid-2">
                   <div class="contact-form">
-                   <form action="/#Message-Sent" name="contact" method="POST"><input type="hidden" name="form-name" value="contact">
+                   <form action="https://formspree.io/xyynwlly" method="POST">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Name" required="">
                     <label for="email">Email</label>
