--- a/more.html
+++ b/more.html
@@ -19,7 +19,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400;1,500&display=swap" rel="stylesheet"> 
   <script async="" src="assets/js.js"></script>
   <script src="https://kit.fontawesome.com/1dc379e3e7.js" crossorigin="anonymous"></script>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap.css" rel="stylesheet">
@@ -118,20 +117,28 @@
     <div>
       <span class="more-head">Other Stuff</span>
     </div>
+
     <span class="more-head2">Podcasts</span>
-    <p>I listen to <a href="https://darknetdiaries.com" target="_blank">Darknet Diaries</a>, an investigative podcast created by Jack Rhysider, chronicling true stories about hackers, malware, botnets, cryptography, cryptocurrency, cybercrime, and Internet privacy, all subjects falling under the umbrella of "tales from the dark side of the Internet" and <a href="https://techkatha.com" target="_blank">TechKatha</a>, a sinhala podcast that talks about new technologies and gives solutions to tech related problems.</p>
-    <span class="more-head2">Songs</span>
-    <p>I'm interested in any kind of music (Sinhala, English, Tamil, Telugu, Malayalam) that keep me calm. If you want to check out what I'm listening into just lookup below playlist.</p>
-    <iframe width="40%" height="200" style="padding-bottom: 10px;" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1013538586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <p>I'm interested in IT related stuff so nomally I'm listening into these podcasts.
+      <ul>
+        <li><a href="https://techkatha.com" target="_blank">TechKatha</a> - a sinhala podcast that talks about new technologies and gives solutions to tech related problems.</li>
+        <li><a href="https://darknetdiaries.com" target="_blank">Darknet Diaries</a> - an investigative podcast created by Jack Rhysider, chronicling true stories about hackers, malware, botnets, cryptography, cryptocurrency, cybercrime, and Internet privacy, all subjects falling under the umbrella of "tales from the dark side of the Internet".</li>
+        <li><a href="https://www.theverge.com/the-vergecast">The Vergecast</a> - Every Friday, Nilay Patel, Dieter Bohn, and Paul Miller make sense of the week’s tech news with help from our diverse and wide-ranging staff.</li>
+        <li><a href="https://twit.tv/shows/security-now">Security Now</a> - a weekly podcast hosted by Steve Gibson, the man who coined the term spyware and created the first anti-spyware program, creator of Spinrite and ShieldsUP, discusses the hot topics in security today with Leo Laporte.</li>
+      </ul></p>
 
-    <p style="font-size: 12px;">* Illustrations From <a href="http://www.freepik.com">Freepik</a></p>
+      <span class="more-head2">Songs</span>
+      <p>I'm interested in any kind of music (Sinhala, English, Tamil, Telugu, Malayalam) that keep me calm. If you want to check out what I'm listening into just lookup below playlist.</p>
+      <iframe width="40%" height="200" style="padding-bottom: 10px;" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1013538586&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
-  </div>
-</main>
+      <p style="font-size: 12px;">* Illustrations From <a href="http://www.freepik.com">Freepik</a></p>
 
-<!-- FOOTER -->
-<footer class="footer mt-auto py-3 text-white text-center">
-  <!-- ❤️ -->
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="footer mt-auto py-3 text-white text-center">
+    <!-- ❤️ -->
     <span>Made with <i class="fa fa-heart" style="color: red;" title="Love"></i> by <a href="https://twitter.com/NandiyaLive" title="Twitter : @NandiyaLive">@NandiyaLive</a> <i class="fab fa-twitter"></i>
     </a>
   </br>Check the code at <a target="_blank" href="https://github.com/NandiyaLive/nandiyalive.github.io"><span>GitHub</span></a> <i class="fab fa-github"></i>
